# krakenrs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-rust.yml
examples/: kraken-feed.rs  kraken.rs
examples/ws/: mod.rs
hooks/: pre-commit
src/: error.rs  kraken_client.rs  kraken_rest_client.rs  last_and_data.rs  lib.rs  messages.rs  non_blocking.rs  serde_helpers.rs  tests.rs
src/ws/: config.rs  conn.rs  messages.rs  mod.rs  types.rs
