[package]
name = "krakenrs"
version = "5.3.1"
authors = ["Chris Beck <beck.ct@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Rust bindings to the Kraken REST API and websockets API for spot trading"
license = "WTFPL"
keywords = ["kraken", "trading", "exchange"]
categories = ["web-programming::http-client", "web-programming::websocket"]
repository = "https://github.com/garbageslam/krakenrs"

[lib]
name = "krakenrs"
path = "src/lib.rs"

[[bin]]
name = "krak"
path = "src/bin/krak.rs"

[[bin]]
name = "krak-feed"
path = "src/bin/krak-feed.rs"

[dependencies]
base64 = "0.13"
chrono = "0.4"
crc32fast = "1.3"
displaydoc = "0.2"
env_logger = "0.9"
futures = "0.3"
hmac = "0.12"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
serde_with = "1.6"
sha2 = "0.10"
rust_decimal = "1.17"
structopt = "0.3"
tokio = { version = "1.15", optional = true, features = ["full"] }
tokio-tungstenite = { version = "0.16", optional = true, features = ["native-tls"] }
url = "2.2"

[features]
default = ["ws"]
ws = ["tokio", "tokio-tungstenite"]

[lints.clippy]
result_large_err = "allow"
