[package]
name = "krakenrs"
version = "6.0.1"
authors = ["Chris Beck <beck.ct@gmail.com>"]
edition = "2024"
readme = "README.md"
description = "Rust bindings to the Kraken REST API and websockets API for spot trading"
license = "WTFPL"
keywords = ["kraken", "trading", "exchange"]
categories = ["web-programming::http-client", "web-programming::websocket"]
repository = "https://github.com/cbeck88/krakenrs"

[lib]
name = "krakenrs"
path = "src/lib.rs"

[[example]]
name = "kraken"
path = "examples/kraken.rs"

[[example]]
name = "kraken-feed"
path = "examples/kraken-feed.rs"

[dependencies]
base64 = "0.20"
crc32fast = { version = "1.3", optional = true }
displaydoc = "0.2"
futures = "0.3"
hmac = "0.12"
http = "1.3"
log = "0.4"
reqwest = { version = "0.12", default-features=false, features = ["blocking", "charset", "http2", "system-proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_qs = "0.15"
serde_with = "1.6"
sha2 = "0.10"
rust_decimal = { version = "1.17", features = ["serde-with-arbitrary-precision"] }
tokio = { version = "1.15", optional = true, features = ["macros", "net", "rt"] }
tokio-tungstenite = { version = "0.27", optional = true, default-features=false, features = ["connect", "handshake"] }
url = "2.2"

[dev-dependencies]
chrono = "0.4"
env_logger = "0.9"
structopt = "0.3"
tokio = { version = "1.15", features = ["time"] }

[features]
default = ["ws", "native-tls"]
ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:crc32fast"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite?/native-tls"]
rustls-tls = ["reqwest/rustls-tls", "tokio-tungstenite?/rustls"]

[lints.clippy]
result_large_err = "allow"
