[package]
name = "krakenrs"
version = "6.6.0"
authors = ["Chris Beck <beck.ct@gmail.com>"]
edition = "2024"
readme = "README.md"
description = "Rust bindings to the Kraken REST API and websockets API for spot trading"
license = "WTFPL"
keywords = ["kraken", "trading", "exchange"]
categories = ["web-programming::http-client", "web-programming::websocket"]
repository = "https://github.com/cbeck88/krakenrs"

[lib]
name = "krakenrs"
path = "src/lib.rs"

[[example]]
name = "kraken"
path = "examples/kraken.rs"

[[example]]
name = "kraken-feed"
path = "examples/kraken-feed.rs"
required-features = ["ws"]

[dependencies]
base64ct = { version = "1", features = ["alloc"] }
crc32fast = { version = "1.3", optional = true }
displaydoc = "0.2"
futures = "0.3"
hmac = "0.12"
http = "1.3"
log = "0.4"
reqwest = { version = "0.12", default-features=false, features = ["blocking", "charset", "http2", "system-proxy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_qs = "0.15"
sha2 = "0.10"
rust_decimal = { version = "1.17", features = ["serde-with-arbitrary-precision"] }
tokio = { version = "1.15", optional = true, features = ["macros", "net", "rt"] }
tokio-tungstenite = { version = "0.28", optional = true, default-features=false, features = ["connect", "handshake"] }
url = "2.2"

[dev-dependencies]
anstyle = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
tokio = { version = "1.15", features = ["time"] }

[features]
default = ["ws", "native-tls"]
ws = ["dep:tokio", "dep:tokio-tungstenite", "dep:crc32fast"]
native-tls = ["reqwest/native-tls", "tokio-tungstenite?/native-tls"]
rustls-tls = ["reqwest/rustls-tls-webpki-roots-no-provider", "tokio-tungstenite?/rustls-tls-webpki-roots"]

[lints.clippy]
result_large_err = "allow"
